--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .edit-form .field{margin:0}
 .edit-form .field.full{grid-column:1 / -1}
 .edit-form .field .v input,.edit-form .field .v select,.edit-form .field .v textarea{width:100%}
-.edit-form input[type=number]{max-width:75px}
+.edit-form input[type=number]{max-width:2ch}
 .edit-form .kv2{grid-column:1 / -1;display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:12px;margin:0}
 .edit-form .kv2 .kvsingle{margin:0}
 .edit-form .kv2 .v{display:flex;align-items:center}
