--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .title-select-group{position:relative;display:inline-flex;flex-direction:column;align-items:flex-start;gap:6px;max-width:100%;min-width:0}
 .title-select-wrap{display:flex;align-items:center;gap:6px;position:relative;margin:0;max-width:100%;min-width:0}
 .title-select{display:none}
-.title-select-trigger{appearance:none;border:none;background:linear-gradient(135deg,#ffffff,#f3f6fb);border-radius:14px;padding:12px 18px;font:inherit;font-size:clamp(20px,3vw,28px);line-height:1.1;font-weight:800;letter-spacing:-0.01em;color:var(--ink);display:inline-flex;align-items:center;gap:12px;cursor:pointer;box-shadow:var(--shadow1);transition:transform var(--dur) var(--ease),box-shadow var(--dur) var(--ease),background var(--dur) var(--ease);min-width:0;max-width:100%;text-align:left}
-.title-select-trigger:hover{transform:translateY(-1px);box-shadow:var(--shadow2)}
+.title-select-trigger{appearance:none;border:none;background:linear-gradient(135deg,#ffffff,#f3f6fb);border-radius:14px;padding:12px 18px;font:inherit;font-size:clamp(20px,3vw,28px);line-height:1.1;font-weight:800;letter-spacing:-0.01em;color:var(--ink);display:inline-flex;align-items:center;gap:12px;cursor:pointer;transition:transform var(--dur) var(--ease),background var(--dur) var(--ease);min-width:0;max-width:100%;text-align:left}
+.title-select-trigger:hover{transform:translateY(-1px)}
 .title-select-trigger:focus-visible{outline:3px solid rgba(26,115,232,.35);outline-offset:4px}
-.title-select-trigger[aria-expanded="true"]{transform:translateY(-1px);box-shadow:var(--shadow2)}
+.title-select-trigger[aria-expanded="true"]{transform:translateY(-1px)}
 .title-select-trigger:disabled{cursor:not-allowed;opacity:.6;box-shadow:none;transform:none;background:#e2e8f0;color:#64748b}
 .title-select-trigger:disabled .char-toggle-icon{background:#cbd5f5;color:#475569}
 .char-toggle-text{display:block;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
@@ -58,7 +58,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .title-select-trigger:hover .char-toggle-icon{background:#dbeafe}
 .title-select-trigger[aria-expanded="true"] .char-toggle-icon{transform:rotate(180deg)}
 .title-select-trigger svg{width:16px;height:16px}
-.char-menu{position:absolute;top:calc(100% + 12px);left:0;min-width:280px;max-width:min(360px,calc(100vw - 32px));max-height:360px;padding:8px 0;border-radius:16px;background:#fff;border:1px solid var(--border);box-shadow:var(--shadow2);display:flex;flex-direction:column;gap:2px;z-index:55;overflow:auto}
+.char-menu{position:absolute;top:calc(100% + 12px);left:0;min-width:280px;max-width:min(360px,calc(100vw - 32px));max-height:360px;padding:8px 0;border-radius:16px;background:#fff;border:1px solid var(--border);display:flex;flex-direction:column;gap:2px;z-index:55;overflow:auto}
 .char-menu[hidden]{display:none}
 .char-menu-item{width:100%;display:flex;align-items:center;justify-content:space-between;gap:12px;padding:10px 18px;font:inherit;font-size:16px;color:var(--ink);background:none;border:none;cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease)}
 .char-menu-item:hover,.char-menu-item:focus-visible{background:#eef4ff;color:var(--primary);outline:none}
@@ -79,9 +79,9 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .sheet-card-header > .toolbar{padding-top:12px}
 .sheet-card-header > .header-quick{padding-top:12px}
 .sheet-card-header > .header-quick.dm-summary{border-top:none;padding-top:0;margin-top:6px}
-.select,.btn,.search input{border:1px solid var(--border);background:#fff;border-radius:12px;padding:10px 12px;font-weight:600;box-shadow:var(--shadow1)}
-.btn{cursor:pointer;transition:transform var(--dur) var(--ease),box-shadow var(--dur) var(--ease)}
-.btn:hover{transform:translateY(-1px);box-shadow:var(--shadow2)}
+.select,.btn,.search input{border:1px solid var(--border);background:#fff;border-radius:12px;padding:10px 12px;font-weight:600}
+.btn{cursor:pointer;transition:transform var(--dur) var(--ease)}
+.btn:hover{transform:translateY(-1px)}
 .btn.primary{background:var(--primary);color:#fff;border-color:transparent}
 .btn-icon{display:inline-flex;align-items:center;justify-content:center;margin-right:6px}
 .btn-icon svg{width:14px;height:14px}
@@ -130,16 +130,16 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .dm-metric{display:flex;flex-direction:column;gap:2px}
 .dm-metric-label{font-size:12px;letter-spacing:.08em;text-transform:uppercase;color:var(--muted);font-weight:600}
 .dm-metric-value{font-size:20px;font-weight:700;color:var(--ink)}
-.dm-items-btn{display:inline-flex;align-items:center;gap:10px;border:1px solid var(--border);background:#fff;border-radius:12px;padding:8px 12px;font-weight:600;font-size:14px;color:var(--muted);box-shadow:var(--shadow1);cursor:pointer;transition:color var(--dur) var(--ease),background var(--dur) var(--ease),box-shadow var(--dur) var(--ease)}
-.dm-items-btn:hover,.dm-items-btn:focus-visible{color:var(--primary);background:#eef4ff;box-shadow:var(--shadow2);outline:none}
+.dm-items-btn{display:inline-flex;align-items:center;gap:10px;border:1px solid var(--border);background:#fff;border-radius:12px;padding:8px 12px;font-weight:600;font-size:14px;color:var(--muted);cursor:pointer;transition:color var(--dur) var(--ease),background var(--dur) var(--ease)}
+.dm-items-btn:hover,.dm-items-btn:focus-visible{color:var(--primary);background:#eef4ff;outline:none}
 .dm-items-btn[aria-expanded="true"]{color:var(--primary);background:#eef4ff}
 .dm-items-icon img{display:block;width:24px;height:24px}
 .dm-items-count{font-weight:700;color:var(--ink)}
 .inventory-buttons{display:flex;align-items:center;gap:18px;margin-left:auto;flex-wrap:wrap}
-.inventory-link{display:inline-flex;align-items:center;gap:8px;background:transparent;border:none;padding:6px 8px;border-radius:10px;font-weight:600;font-size:14px;color:var(--muted);cursor:pointer;transition:color var(--dur) var(--ease),background var(--dur) var(--ease),box-shadow var(--dur) var(--ease)}
+.inventory-link{display:inline-flex;align-items:center;gap:8px;background:transparent;border:none;padding:6px 8px;border-radius:10px;font-weight:600;font-size:14px;color:var(--muted);cursor:pointer;transition:color var(--dur) var(--ease),background var(--dur) var(--ease)}
 .inventory-link .icon svg,.inventory-link .icon img,.inventory-metric .icon svg{width:24px;height:24px;display:block}
 .inventory-link .text,.inventory-metric .text{letter-spacing:.02em}
-.inventory-link:hover,.inventory-link:focus-visible{color:var(--primary);background:#eef4ff;box-shadow:0 8px 16px rgba(26,115,232,.18)}
+.inventory-link:hover,.inventory-link:focus-visible{color:var(--primary);background:#eef4ff}
 .inventory-link:active{color:#0b57d0;background:#d7e4ff}
 .inventory-link:focus-visible{outline:none}
 .inventory-metric{display:inline-flex;align-items:center;gap:8px;padding:6px 0;color:var(--muted);font-weight:600}
