--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .title-select-group{position:relative;display:inline-flex;flex-direction:column;align-items:flex-start;gap:6px;max-width:100%;min-width:0}
 .title-select-wrap{display:flex;align-items:center;gap:6px;position:relative;margin:0;max-width:100%;min-width:0}
 .title-select{display:none}
-.title-select-trigger{appearance:none;border:none;background:linear-gradient(135deg,#ffffff,#f3f6fb);border-radius:14px;padding:12px 18px;font:inherit;font-size:clamp(20px,3vw,28px);line-height:1.1;font-weight:800;letter-spacing:-0.01em;color:var(--ink);display:inline-flex;align-items:center;gap:12px;cursor:pointer;transition:transform var(--dur) var(--ease),background var(--dur) var(--ease);min-width:0;max-width:100%;text-align:left}
-.title-select-trigger:hover{transform:translateY(-1px)}
+.title-select-trigger{appearance:none;border:1px solid transparent;background:#fff;border-radius:14px;padding:12px 18px;font:inherit;font-size:clamp(20px,3vw,28px);line-height:1.1;font-weight:800;letter-spacing:-0.01em;color:var(--ink);display:inline-flex;align-items:center;gap:12px;cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease);min-width:0;max-width:100%;text-align:left;box-shadow:none}
+.title-select-trigger:hover{background:#eef4ff;border-color:rgba(26,115,232,.35)}
 .title-select-trigger:focus-visible{outline:3px solid rgba(26,115,232,.35);outline-offset:4px}
-.title-select-trigger[aria-expanded="true"]{transform:translateY(-1px)}
+.title-select-trigger[aria-expanded="true"]{background:#eef4ff;border-color:rgba(26,115,232,.35)}
 .title-select-trigger:disabled{cursor:not-allowed;opacity:.6;box-shadow:none;transform:none;background:#e2e8f0;color:#64748b}
 .title-select-trigger:disabled .char-toggle-icon{background:#cbd5f5;color:#475569}
 .char-toggle-text{display:block;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
@@ -80,26 +80,27 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .sheet-card-header > .header-quick{padding-top:12px}
 .sheet-card-header > .header-quick.dm-summary{border-top:none;padding-top:0;margin-top:6px}
 .select,.btn,.search input{border:1px solid var(--border);background:#fff;border-radius:12px;padding:10px 12px;font-weight:600}
-.btn{cursor:pointer;transition:transform var(--dur) var(--ease)}
-.btn:hover{transform:translateY(-1px)}
+.btn{cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease)}
+.btn:hover,.btn:focus-visible{background:#eef4ff;border-color:rgba(26,115,232,.35);color:var(--primary);outline:none}
 .btn.primary{background:var(--primary);color:#fff;border-color:transparent}
+.btn.primary:hover,.btn.primary:focus-visible{background:#155ccb;border-color:#0b57d0;color:#fff;outline:none}
 .btn-icon{display:inline-flex;align-items:center;justify-content:center;margin-right:6px}
 .btn-icon svg{width:14px;height:14px}
 .btn.danger{border:1px solid rgba(220,38,38,.2);background:rgba(254,226,226,1);color:var(--danger);}
-.btn.danger:hover{background:#fecaca;border-color:rgba(220,38,38,.35)}
+.btn.danger:hover,.btn.danger:focus-visible{background:#fecaca;border-color:rgba(220,38,38,.35);color:#b91c1c;outline:none}
 .btn.small{padding:6px 10px;font-size:12px;border-radius:10px;display:inline-flex;align-items:center;gap:6px}
 .search{position:relative}
 .search input{padding-left:36px;outline:none;width:220px;max-width:100%}
 .search svg{position:absolute;left:10px;top:50%;transform:translateY(-50%);width:18px;height:18px;opacity:.6}
 .toolbar .spacer{flex:1 1 auto}
 
-.icon-btn{display:inline-flex;align-items:center;justify-content:center;width:28px;height:28px;border-radius:50%;border:1px solid var(--border);background:#fff;color:var(--muted);cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),box-shadow var(--dur) var(--ease)}
+.icon-btn{display:inline-flex;align-items:center;justify-content:center;width:28px;height:28px;border-radius:50%;border:1px solid var(--border);background:#fff;color:var(--muted);cursor:pointer;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),border-color var(--dur) var(--ease);box-shadow:none}
 .icon-btn svg{width:14px;height:14px;pointer-events:none}
-.icon-btn:hover{color:var(--primary);background:#eef4ff;box-shadow:var(--shadow1)}
+.icon-btn:hover,.icon-btn:focus-visible{color:var(--primary);background:#eef4ff;border-color:rgba(26,115,232,.35);outline:none}
 .icon-btn.danger{border-color:rgba(220,38,38,.2);background:#fee2e2;color:var(--danger)}
-.icon-btn.danger:hover{color:#991b1b;background:#fecaca;box-shadow:var(--shadow1)}
+.icon-btn.danger:hover,.icon-btn.danger:focus-visible{color:#991b1b;background:#fecaca;border-color:rgba(220,38,38,.35);outline:none}
 .icon-btn.primary{background:var(--primary);color:#fff;border-color:var(--primary)}
-.icon-btn.primary:hover{box-shadow:var(--shadow2)}
+.icon-btn.primary:hover,.icon-btn.primary:focus-visible{background:#155ccb;border-color:#0b57d0;outline:none}
 .icon-btn[disabled]{opacity:.5;cursor:not-allowed;box-shadow:none;background:#f1f5f9;color:#94a3b8}
 .download-btn{margin-left:auto;align-self:flex-start;display:inline-flex;align-items:center;justify-content:center;gap:6px;width:auto;height:32px;padding:0 12px;border:none;border-radius:999px;background:transparent;box-shadow:none;color:var(--primary);font-weight:600;font-size:13px;line-height:1}
 .download-btn .save-icon,.download-btn .save-spinner,.download-btn .save-success{display:none;align-items:center;justify-content:center;gap:6px}
