--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .btn.danger:hover,.btn.danger:focus-visible{background:#fecaca;border-color:rgba(220,38,38,.35);color:#b91c1c;outline:none}
 .btn.small{padding:6px 10px;font-size:12px;border-radius:10px;display:inline-flex;align-items:center;gap:6px}
 .btn.pill{border-radius:999px}
+#activityToggle{background:#fff;color:var(--ink);border-color:var(--border)}
+#activityToggle[aria-pressed="true"]{background:var(--primary);color:#fff;border-color:transparent}
+#activityToggle[aria-pressed="true"]:hover,
+#activityToggle[aria-pressed="true"]:focus-visible{background:#155ccb;border-color:#0b57d0;color:#fff;outline:none}
 .search{position:relative}
 .search input{padding-left:36px;outline:none;width:220px;max-width:100%}
 .search svg{position:absolute;left:10px;top:50%;transform:translateY(-50%);width:18px;height:18px;opacity:.6}
@@ -254,6 +258,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .card-link-chip{align-self:flex-start}
 .card.open .card-link-chip-row{display:flex}
 .pill{background:#fff7e6;color:#a05a00;border:1px solid #ffe3b0;border-radius:999px;padding:4px 8px;font-weight:700;font-size:11px}
+.btn.pill{background:#fff;color:var(--ink);border:1px solid var(--border);border-radius:999px;box-shadow:none}
 .pill-link{display:inline-flex;align-items:center;justify-content:center;gap:6px;appearance:none;font:inherit;font-weight:600;font-size:12px;line-height:1;white-space:nowrap;text-decoration:none;background:#eef4ff;color:#1a73e8;border:1px solid rgba(26,115,232,.35);border-radius:999px;padding:4px 10px;cursor:pointer;box-shadow:none;transition:background var(--dur) var(--ease),color var(--dur) var(--ease),box-shadow var(--dur) var(--ease)}
 .pill-link svg{width:14px;height:14px;display:block;pointer-events:none}
 .pill-link:hover{background:#dbeafe;color:#0b57d0;box-shadow:var(--shadow1)}
@@ -986,7 +991,6 @@ function updateActivityToggle(){
   const hiding=!showActivities;
   activityToggleBtn.textContent=hiding?'Show activities':'Hide activities';
   activityToggleBtn.setAttribute('aria-pressed', hiding?'true':'false');
-  activityToggleBtn.classList.toggle('primary', hiding);
   const label=hiding?'Show downtime activities':'Hide downtime activities';
   activityToggleBtn.setAttribute('aria-label', label);
   activityToggleBtn.title=label;
