--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .btn.small{padding:6px 10px;font-size:12px;border-radius:10px;display:inline-flex;align-items:center;gap:6px}
 .btn.pill{border-radius:999px}
 #activityToggle{background:#fff;color:var(--ink);border-color:var(--border)}
+#activityToggle:hover,
+#activityToggle:focus-visible{background:#dbeafe;border-color:rgba(26,115,232,.45);color:var(--primary);}
 #activityToggle[aria-pressed="true"]{background:var(--primary);color:#fff;border-color:transparent}
 #activityToggle[aria-pressed="true"]:hover,
 #activityToggle[aria-pressed="true"]:focus-visible{background:#155ccb;border-color:#0b57d0;color:#fff;outline:none}
